--- a/AddressPage.html
+++ b/AddressPage.html
@@ -10,13 +10,13 @@
         <div ><a class="logo" href="index.html">Логотип</a></div>
         <div class="search"><input placeholder="Search"/></div>
         <div >
-            <a class="basket " href="CartPage.html">
-                <span class="basket-img"></span>Корзина
+            <a class="basket" href="CartPage.html">
+                <span class="basket-img"></span>Cart
             </a>
         </div>
         <div >
-            <a class="authorization" href="register.html">
-                <span class="authorization-img"></span>Личный кабинет
+            <a class="authorization" href="index.html">
+                <span class="authorization-img"></span>Logout
             </a>
         </div>
     </header>
