--- a/CartPage.html
+++ b/CartPage.html
@@ -11,12 +11,12 @@
         <div class="search"><input placeholder="Search"/></div>
         <div >
             <a class="basket " href="CartPage.html">
-                <span class="basket-img"></span>Корзина
+                <span class="basket-img"></span>Cart
             </a>
         </div>
         <div >
-            <a class="authorization" href="register.html">
-                <span class="authorization-img"></span>Личный кабинет
+            <a class="authorization" href="index.html">
+                <span class="authorization-img"></span>Logout
             </a>
         </div>
     </header> 
