--- a/videoAAdapter.html
+++ b/videoAAdapter.html
@@ -9,8 +9,15 @@
     <header>
         <div ><a class="logo" href="index.html">Логотип</a></div>
         <div class="search"><input placeholder="Search"/></div>
-        <div ><a class="basket" href=""><span class="basket-img"></span>Корзина</a></div>
-        <div ><a class="authorization" href="register.html"><span class="authorization-img"></span>Личный кабинет</a></div>
+        <div>
+            <a class="basket" href="login.html">
+                <span class="basket-img"></span>Cart
+            </a></div>
+        <div>
+            <a class="authorization" href="login.html">
+                <span class="authorization-img"></span>Login
+            </a>
+        </div>
     </header>
     
 <!--Menu(All pages)-->
