--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html>
 <head>
 	<meta charset="utf-8">
+    <link rel="icon" href="img/Symbol/protsessor_intel_core_i7_4790s_3200mhz_8mb_lga_1150_oem.png">
     <title>Home page</title>
 	<link rel="stylesheet"  href="style.css">
 </head>
 <body>
     <div class="wrapper">
     <header>
-        <div ><a class="logo" href="index.html">Логотип</a></div>
-        <div ><a class="authorization" href="#openModal"><span class="authorization-img"></span>Личный кабинет</a></div>
-        <div ><a class="basket " href="CartPage.html"><span class="basket-img"></span>Корзина</a></div>
+        <div><a class="logo" href="index.html"></a></div>
+        <div><a class="authorization" href="#openModal"><span class="authorization-img"></span>Личный кабинет</a></div>
+        <div><a class="basket " href="CartPage.html"><span class="basket-img"></span>Корзина</a></div>
         <div class="search"><input type="search" placeholder="Search"/></div>
     </header>
         <div id="openModal" class="modalDialog">
