--- a/CartPage.html
+++ b/CartPage.html
@@ -8,19 +8,26 @@
 <body>
     <div class="wrapper">
     <header>
-        <div ><a class="logo" href="index.html">Логотип</a></div>
-        <div class="search"><input placeholder="Search"/></div>
-        <div >
-            <a class="basket " href="CartPage.html">
-                <span class="basket-img"></span>Корзина
-            </a>
+        <div ><a class="logo" href="index.html"></a></div>
+        <div ><a class="authorization" href="#openModal"><span class="authorization-img"></span>Личный кабинет</a></div>
+        <div ><a class="basket " href="CartPage.html"><span class="basket-img"></span>Корзина</a></div>
+        <div class="search"><input type="search" placeholder="Search"/></div>
+    </header>
+        <div id="openModal" class="modalDialog">
+            <div class="login">
+                <a class="close" href="">X</a>
+                <p>Please Sign In</p>
+            <form>
+                Email
+                <input type="email" placeholder="Email address" /><br>
+                Password
+                <input type="password" placeholder="***********"/><br>
+                <input type="checkbox" value="remember"/> Remember me<br>
+                <input type="submit" value="Sign In" /><br>
+            </form>
+                <a class="register" href="register.html">Register</a>
+            </div>
         </div>
-        <div >
-            <a class="authorization" href="register.html">
-                <span class="authorization-img"></span>Личный кабинет
-            </a>
-        </div>
-    </header> 
     <section>
         <div class="totalBar">
             <h2>Basket Summary</h2>
@@ -80,7 +87,6 @@
                                             <input type="number" min="1" max="200" value="1" name="quality">                                           
                                         </div>
                                         <div class="cartPriceView">$100</div>
-                                        <div class="cartPriceView">$500</div>
                                         <div class="itemsRemove">
                                             <input type="button" value="Remove" name="remove">
                                         </div>
