--- a/register.html
+++ b/register.html
@@ -8,8 +8,8 @@
 <body>
     <div class="wrapper">
     <header>
-        <div ><a class="logo" href="index.html">Логотип</a></div>
-        <div ><a class="authorization" href="register.html"><span class="authorization-img"></span>Личный кабинет</a></div>
+        <div ><a class="logo" href="index.html"></a></div>
+        <div ><a class="authorization" href="#openModal"><span class="authorization-img"></span>Личный кабинет</a></div>
         <div ><a class="basket " href="CartPage.html"><span class="basket-img"></span>Корзина</a></div>
         <div class="search"><input type="search" placeholder="Search"/></div>
     </header>
