--- a/videoAAdapter.html
+++ b/videoAAdapter.html
@@ -8,11 +8,26 @@
 <body>
     <div class="wrapper">
     <header>
-        <div ><a class="logo" href="index.html">Логотип</a></div>
-        <div class="search"><input placeholder="Search"/></div>
-        <div ><a class="basket" href="CartPage.html"><span class="basket-img"></span>Корзина</a></div>
-        <div ><a class="authorization" href="register.html"><span class="authorization-img"></span>Личный кабинет</a></div>
+        <div ><a class="logo" href="index.html"></a></div>
+        <div ><a class="authorization" href="#openModal"><span class="authorization-img"></span>Личный кабинет</a></div>
+        <div ><a class="basket " href="CartPage.html"><span class="basket-img"></span>Корзина</a></div>
+        <div class="search"><input type="search" placeholder="Search"/></div>
     </header>
+        <div id="openModal" class="modalDialog">
+            <div class="login">
+                <a class="close" href="">X</a>
+                <p>Please Sign In</p>
+            <form>
+                Email
+                <input type="email" placeholder="Email address" /><br>
+                Password
+                <input type="password" placeholder="***********"/><br>
+                <input type="checkbox" value="remember"/> Remember me<br>
+                <input type="submit" value="Sign In" /><br>
+            </form>
+                <a class="register" href="register.html">Register</a>
+            </div>
+        </div>
     
 <!--Menu(All pages)-->
 <section>    
