--- a/productdescription.html
+++ b/productdescription.html
@@ -39,7 +39,8 @@
                     <li>Товар</li>
                 </ol>
                 <div class="sliderLayout">
-                    <div id="openBigImg" class="bigImgPositioner">
+                    <div class="bigImgPositioner">
+                        <div id="openBigImg" class="modalBigImg"></div>
                          <a href="#openBigImg"><img src="img/CPU/Intel/Intel%20Celeron%20G1620%20OEM.jpg "/></a>
                     </div>
                     <div class="minImg">
