V. 0.1.1 13.11.2015 Change AddressPage.html

--- a/CPU.html
+++ b/CPU.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
     <header>
         <div ><a class="logo" href="index.html"></a></div>
-        <div ><a class="authorization" href="#openModal"><span class="authorization-img"></span>Login</a></div>
+        <div ><a class="authorization" href="#openModal"><span class="authorization-img"></span>Profile</a></div>
         <div ><a class="basket " href="CartPage.html"><span class="basket-img"></span>Cart</a></div>
         <div class="search"><input type="search" placeholder="Search"/></div>
     </header>
@@ -37,14 +37,14 @@
     
 <section>
 <menu type="toolbar" class="navbar">       
-    <a class="menumother activeTitle" href="Motherboard.html"><li>
+    <a class="menumother" href="Motherboard.html"><li>
         <div>           
                 <div class="menumother-img"></div>Motherboard            
         </div>
     </li></a>
     <li>
         <div>
-            <a class="menucpu" href="CPU.html">
+            <a class="menucpu activeTitle" href="CPU.html">
                 <div class="menucpu-img"></div>CPU
             </a>
         </div>
