--- a/RAM.html
+++ b/RAM.html
@@ -9,8 +9,8 @@
     <div class="wrapper">
     <header>
         <div ><a class="logo" href="index.html"></a></div>
-        <div ><a class="authorization" href="#openModal"><span class="authorization-img"></span>Личный кабинет</a></div>
-        <div ><a class="basket " href="CartPage.html"><span class="basket-img"></span>Корзина</a></div>
+        <div ><a class="authorization" href="#openModal"><span class="authorization-img"></span>Profile</a></div>
+        <div ><a class="basket " href="CartPage.html"><span class="basket-img"></span>Cart</a></div>
         <div class="search"><input type="search" placeholder="Search"/></div>
     </header>
         <div id="openModal" class="modalDialog">
@@ -33,7 +33,7 @@
 
 <section>
 <menu type="toolbar" class="navbar">       
-    <a class="menumother activeTitle" href="Motherboard.html"><li>
+    <a class="menumother" href="Motherboard.html"><li>
         <div>           
                 <div class="menumother-img"></div>Motherboard            
         </div>
@@ -47,7 +47,7 @@
     </li>
     <li>
         <div>
-            <a class="menuram" href="RAM.html">
+            <a class="menuram activeTitle" href="RAM.html">
                 <div class="menuram-img"></div>RAM</a>
         </div>
     </li>		
