--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="wrapper">
     <header>
         <div><a class="logo" href="index.html"></a></div>
-        <div><a class="authorization" href="#openModal"><span class="authorization-img"></span>Личный кабинет</a></div>
-        <div><a class="basket " href="CartPage.html"><span class="basket-img"></span>Корзина</a></div>
+        <div><a class="authorization" href="#openModal"><span class="authorization-img"></span>Profile</a></div>
+        <div><a class="basket " href="CartPage.html"><span class="basket-img"></span>Cart</a></div>
         <div class="search"><input type="search" placeholder="Search"/></div>
     </header>
         <div id="openModal" class="modalDialog">
