--- a/orderForm.html
+++ b/orderForm.html
@@ -96,7 +96,7 @@
                         <input type="text" autofocus="off" maxlength="3" placeholder="CVC">
                 </div>
                 <div class="line5">
-                        <input type="submit" value="Finish">
+                        <input type="submit" value="Pay">
                 </div>
                     </form>
             </div>
