--- a/productdescription.html
+++ b/productdescription.html
@@ -40,7 +40,7 @@
                 </ol>
                 <div class="sliderLayout">
                     <div class="bigImgPositioner">
-                        <div id="openBigImg" class="modalBigImg"></div>
+                        <div id="openBigImg" class="modalBigImg"><a href="" class="close">X</a></div>
                          <a href="#openBigImg"><img src="img/CPU/Intel/Intel%20Celeron%20G1620%20OEM.jpg "/></a>
                     </div>
                     <div class="minImg">
