--- a/AddressPage.html
+++ b/AddressPage.html
@@ -29,6 +29,7 @@
             </div>
         </div>
     <section>
+        <div class="freeBlock"></div>
         <div class="address">
             <form>
             <div class="squareAdd">
