--- a/CPU.html
+++ b/CPU.html
@@ -36,6 +36,7 @@
 <!--Menu(All pages)-->
     
 <section>
+<div class="freeBlock"></div>
 <menu type="toolbar" class="navbar">       
     <a class="menumother" href="Motherboard.html"><li>
         <div>           
