--- a/MotherboardList.html
+++ b/MotherboardList.html
@@ -11,8 +11,8 @@
     
     <header>
         <div ><a class="logo" href="index.html"></a></div>
-        <div ><a class="authorization" href="#openModal"><span class="authorization-img"></span>Личный кабинет</a></div>
-        <div ><a class="basket " href="CartPage.html"><span class="basket-img"></span>Корзина</a></div>
+        <div ><a class="authorization" href="#openModal"><span class="authorization-img"></span>Profile</a></div>
+        <div ><a class="basket " href="CartPage.html"><span class="basket-img"></span>Cart</a></div>
         <div class="search"><input type="search" placeholder="Search"/></div>
     </header>
         <div id="openModal" class="modalDialog">
@@ -33,6 +33,7 @@
     
 <!--Menu(All pages)-->
     <section>
+        <div class="freeBlock"></div>
 <menu type="toolbar" class="navbar">       
     <a class="menumother activeTitle" href="Motherboard.html"><li>
         <div>           
