--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </div>
 
     <section>
+    <div class="freeBlock"></div>
       <div class="tab-content-layout">
          <ul class="tab-content">
             <li class="layoutCategories "><a class="Categories Cooling" href="cooling.html"><div class="imgCooling"></div>Cooling</a></li>
