--- a/orderForm.html
+++ b/orderForm.html
@@ -29,6 +29,7 @@
             </div>
         </div>
     <section>
+        <div class="freeBlock"></div>
         <div class="orderFormLayout">
             <div class="orderForm">
                 <div class="line1">
