--- a/videoAAdapter.html
+++ b/videoAAdapter.html
@@ -30,7 +30,8 @@
         </div>
     
 <!--Menu(All pages)-->
-<section>    
+<section>
+    <div class="freeBlock"></div>
 <menu type="toolbar" class="navbar">       
     <a class="menumother" href="Motherboard.html"><li>
         <div>           
