--- a/CartPage.html
+++ b/CartPage.html
@@ -29,6 +29,7 @@
             </div>
         </div>
     <section>
+        <div class="freeBlock"></div>
         <div class="totalBar">
             <h2>Basket Summary</h2>
             <p>(2 items)</p>
