--- a/HDD.html
+++ b/HDD.html
@@ -29,7 +29,8 @@
             </div>
         </div>
  <!--Menu(All pages)-->
-<section>  
+<section>
+<div class="freeBlock"></div>
 <menu type="toolbar" class="navbar">       
     <a class="menumother" href="Motherboard.html"><li>
         <div>           
