--- a/Motherboard.html
+++ b/Motherboard.html
@@ -33,6 +33,7 @@
     
 <!--Menu(All pages)-->
 <section>
+<div class="freeBlock"></div>
 <menu type="toolbar" class="navbar">       
     <li>
         <div>
