--- a/RAM.html
+++ b/RAM.html
@@ -32,6 +32,7 @@
 <!--Menu(All pages)-->
 
 <section>
+    <div class="freeBlock"></div>
 <menu type="toolbar" class="navbar">       
     <a class="menumother" href="Motherboard.html"><li>
         <div>           
