--- a/cooling.html
+++ b/cooling.html
@@ -31,6 +31,7 @@
     
 <!--Menu(All pages)-->
 <section>
+<div class="freeBlock"></div>
 <menu type="toolbar" class="navbar">       
     <a class="menumother" href="Motherboard.html"><li>
         <div>           
