--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-    <link rel="icon" href="img/Symbol/protsessor_intel_core_i7_4790s_3200mhz_8mb_lga_1150_oem.png">
+    <link rel="icon" href="img/Symbol/4.gif">
     <title>Home page</title>
 	<link rel="stylesheet"  href="style.css">
 </head>
