--- a/productdescription.html
+++ b/productdescription.html
@@ -29,6 +29,7 @@
             </div>
         </div>
     <section>
+        <div class="freeBlock"></div>
         <div class="productLayout">
             <div class="productDescription">
 
@@ -40,7 +41,7 @@
                 </ol>
                 <div class="sliderLayout">
                     <div class="bigImgPositioner">
-                        <div id="openBigImg" class="modalBigImg"><a href="" class="close">X</a></div>
+                        <a href="" class="close"><div id="openBigImg" class="backgroundModal"><div  class="modalBigImg"></div></div></a>
                          <a href="#openBigImg"><img src="img/CPU/Intel/Intel%20Celeron%20G1620%20OEM.jpg "/></a>
                     </div>
                     <div class="minImg">
@@ -81,7 +82,7 @@
         </div>
     </section>
     </div>
-    <footer>footer</footer>
+    <footer>© 2015 Powered by Footerist</footer>
 
 </body>
 </html>
