--- a/productdescription.html
+++ b/productdescription.html
@@ -4,13 +4,14 @@
 	<meta charset="utf-8">
     <title>Product description</title>
 	<link rel="stylesheet"  href="style.css">
+    <meta name="viewport" content="user-scalable=false" />
 </head>
 <body>
     <div class="wrapper">
     <header>
         <div ><a class="logo" href="index.html"></a></div>
-        <div ><a class="authorization" href="#openModal"><span class="authorization-img"></span>Profile</a></div>
-        <div ><a class="basket " href="CartPage.html"><span class="basket-img"></span>Cart</a></div>
+        <div ><a class="authorization" href="#openModal"><span class="authorization-img"></span><span class="textHidden">Profile</span></a></div>
+        <div ><a class="basket " href="CartPage.html"><span class="basket-img"></span><span class="textHidden">Cart</span></a></div>
         <div class="search"><input type="search" placeholder="Search"/></div>
     </header>
         <div id="openModal" class="modalDialog">
@@ -41,8 +42,8 @@
                 </ol>
                 <div class="sliderLayout">
                     <div class="bigImgPositioner">
-                        <a href="" class="close"><div id="openBigImg" class="backgroundModal"><div  class="modalBigImg"></div></div></a>
-                         <a href="#openBigImg"><img src="img/CPU/Intel/Intel%20Celeron%20G1620%20OEM.jpg "/></a>
+
+                        <img src="img/CPU/Intel/Intel%20Celeron%20G1620%20OEM.jpg "/>
                     </div>
                     <div class="minImg">
                         <a href=""><div class="arrowLeft"></div></a>
