--- a/orderForm.html
+++ b/orderForm.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
     <title>Order form</title>
 	<link rel="stylesheet"  href="style.css">
+    <meta name="viewport" content="user-scalable=false" />
 </head>
 <body>
     <div class="wrapper">
@@ -32,8 +33,8 @@
         <div class="freeBlock"></div>
         <div class="orderFormLayout">
             <div class="orderForm">
+                <form>
                 <div class="line1">
-                    <form>
                     <input type="text" autofocus="on" maxlength="4" tabindex="1">
                     <input type="text" autofocus="off" maxlength="4" tabindex="2">
                     <input type="text" autofocus="off" maxlength="4" tabindex="3">
