--- a/AddressPage.html
+++ b/AddressPage.html
@@ -2,21 +2,24 @@
 <html>
 <head>
 	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Address</title>
 	<link rel="stylesheet"  href="style.css">
 </head>
 <body>
     <div class="wrapper">
     <header>
-        <div ><a class="logo" href="index.html"></a></div>
-        <div >
+        <div><a class="logo" href="index.html"></a></div>
+        <div>
             <a class="authorization" href="#openModal">
-            <span class="authorization-img"></span>Profile
+                <span class="authorization-img"></span>
+                <span class="textHidden">Profile</span>
             </a>
         </div>
-        <div >
+        <div>
             <a class="basket " href="CartPage.html">
-                <span class="basket-img"></span>Cart
+                <span class="basket-img"></span>
+                <span class="textHidden">Cart</span>
             </a>
         </div>
         <div class="search">
