--- a/orderForm.html
+++ b/orderForm.html
@@ -9,9 +9,19 @@
 <body>
     <div class="wrapper">
     <header>
-        <div ><a class="logo" href="index.html"></a></div>
-        <div ><a class="authorization" href="#openModal"><span class="authorization-img"></span>Profile</a></div>
-        <div ><a class="basket " href="CartPage.html"><span class="basket-img"></span>Cart</a></div>
+        <div><a class="logo" href="index.html"></a></div>
+        <div>
+            <a class="authorization" href="#openModal">
+                <span class="authorization-img"></span>
+                <span class="textHidden">Profile</span>
+            </a>
+        </div>
+        <div>
+            <a class="basket " href="CartPage.html">
+                <span class="basket-img"></span>
+                <span class="textHidden">Cart</span>
+            </a>
+        </div>
         <div class="search"><input type="search" placeholder="Search"/></div>
     </header>
         <div id="openModal" class="modalDialog">
