--- a/CartPage.html
+++ b/CartPage.html
@@ -2,29 +2,40 @@
 <html>
 <head>
 	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
 	<link rel="stylesheet"  href="style.css">
 </head>
 <body>
     <div class="wrapper">
     <header>
-        <div ><a class="logo" href="index.html"></a></div>
-        <div ><a class="authorization" href="#openModal"><span class="authorization-img"></span>Profile</a></div>
-        <div ><a class="basket " href="CartPage.html"><span class="basket-img"></span>Cart</a></div>
+        <div><a class="logo" href="index.html"></a></div>
+        <div>
+            <a class="authorization" href="#openModal">
+                <span class="authorization-img"></span>
+                <span class="textHidden">Profile</span>
+            </a>
+        </div>
+        <div>
+            <a class="basket" href="CartPage.html">
+                <span class="basket-img"></span>
+                <span class="textHidden">Cart</span>
+            </a>
+        </div>
         <div class="search"><input type="search" placeholder="Search"/></div>
     </header>
         <div id="openModal" class="modalDialog">
             <div class="login">
                 <a class="close" href="">X</a>
                 <p>Please Sign In</p>
-            <form>
-                Email
-                <input type="email" placeholder="Email address" /><br>
-                Password
-                <input type="password" placeholder="***********"/><br>
-                <input type="checkbox" value="remember"/> Remember me<br>
-                <input type="submit" value="Sign In" /><br>
-            </form>
+                <form>
+                    Email
+                    <input type="email" placeholder="Email address" /><br>
+                    Password
+                    <input type="password" placeholder="***********"/><br>
+                    <input type="checkbox" value="remember"/> Remember me<br>
+                    <input type="submit" value="Sign In" /><br>
+                </form>
                 <a class="register" href="register.html">Register</a>
             </div>
         </div>
