--- a/index.html
+++ b/index.html
@@ -11,31 +11,34 @@
 </head>
 <body>
     <div class="wrapper">
-    <header>
-        <div><a class="logo" href="index.html"></a></div>
-        <div><a class="authorization" href="#openModal"><span class="authorization-img"></span><span class="textHidden">Profile</span></a></div>
-        <div><a class="basket " href="CartPage.html"><span class="basket-img"></span><span class="textHidden">Cart</span></a></div>
-        <div class="search"><input type="search" placeholder="Search"/></div>
+    <header class="header header--style">
+        <a class="header__elements header__elements--logo" href="index.html"></a>
+        <a class="header__elements header__elements--authorization" href="#openModal">
+            <span class="header__authorization-img"></span>
+            <span class="header__text-hidden">Profile</span>
+        </a>
+        <a class="header__elements header__elements--basket" href="CartPage.html">
+            <span class="header__basket-img"></span>
+            <span class="header__text-hidden">Cart</span>
+        </a>
+        <input class="header__elements header__elements--search" type="search" placeholder="Search"/>
     </header>
-        <div id="openModal" class="modalDialog">
-            <div class="login">
-                <a class="close" href="">X</a>
-                <p>Please Sign In</p>
-            <form>
+        <div id="openModal" class="modal-dialog">
+            <form class="login-form login-form--full">
+                <a class="login-form__close" href="">X</a>
+                <p class="login-form__header">Please Sign In</p>
                 Email
-                <input type="email" placeholder="Email address" /><br>
+                <input class="login-form__email login-form__input" type="email" placeholder="Email address" /><br>
                 Password
-                <input type="password" placeholder="***********"/><br>
-                <input type="checkbox" value="remember"/> Remember me<br>
-                <input type="submit" value="Sign In" /><br>
+                <input class="login-form__password login-form__input" type="password" placeholder="***********"/><br>
+                <input class="login-form__remember-me login-form__input" type="checkbox" value="remember"/> Remember me<br>
+                <input class="login-form__sign-in login-form__input" type="submit" value="Sign In" /><br>
+                <a class="login-form__register" href="register.html">Register</a>
             </form>
-                <a class="register" href="register.html">Register</a>
-            </div>
         </div>
 
     <section>
-    <div class="freeBlock"></div>
-      <div class="tab-content-layout">
+      <div class="content-layout">
          <ul class="tab-content">
             <li class="layoutCategories "><a class="Categories Motherboard" href="Motherboard.html"><div class="imgMotherboard"></div>Motherboard</a></li>
              <li class="layoutCategories "><a class="Categories CPU" href="CPU.html"><div class="imgCPU"></div>CPU</a></li>
@@ -48,6 +51,6 @@
        </div>            
     </section>
     </div>
-    <footer>© 2015 Powered by Footerist</footer>
+    <footer class="footer">© 2015 Powered by Footerist</footer>
 </body>
 </html>
