--- a/productdescription.html
+++ b/productdescription.html
@@ -4,86 +4,82 @@
 	<meta charset="utf-8">
     <title>Product description</title>
 	<link rel="stylesheet"  href="style.css">
-    <meta name="viewport" content="user-scalable=false" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 </head>
 <body>
     <div class="wrapper">
-    <header>
-        <div ><a class="logo" href="index.html"></a></div>
-        <div ><a class="authorization" href="#openModal"><span class="authorization-img"></span><span class="textHidden">Profile</span></a></div>
-        <div ><a class="basket " href="CartPage.html"><span class="basket-img"></span><span class="textHidden">Cart</span></a></div>
-        <div class="search"><input type="search" placeholder="Search"/></div>
+    <header class="header header--style">
+        <a class="header__elements header__elements--logo" href="index.html"></a>
+        <a class="header__elements header__elements--authorization" href="#openModal">
+            <span class="header__authorization-img"></span>
+            <span class="header__text-hidden">Profile</span>
+        </a>
+        <a class="header__elements header__elements--basket" href="CartPage.html">
+            <span class="header__basket-img"></span>
+            <span class="header__text-hidden">Cart</span>
+        </a>
+        <input class="header__elements header__elements--search" type="search" placeholder="Search"/>
     </header>
-        <div id="openModal" class="modalDialog">
-            <div class="login">
-                <a class="close" href="">X</a>
-                <p>Please Sign In</p>
-            <form>
+        <div id="openModal" class="modal-dialog">
+            <form class="login-form login-form--full">
+                <a class="login-form__close" href="">X</a>
+                <p class="login-form__header">Please Sign In</p>
                 Email
-                <input type="email" placeholder="Email address" /><br>
+                <input class="login-form__email login-form__input" type="email" placeholder="Email address" /><br>
                 Password
-                <input type="password" placeholder="***********"/><br>
-                <input type="checkbox" value="remember"/> Remember me<br>
-                <input type="submit" value="Sign In" /><br>
+                <input class="login-form__password login-form__input" type="password" placeholder="***********"/><br>
+                <input class="login-form__remember-me login-form__input" type="checkbox" value="remember"/> Remember me<br>
+                <input class="login-form__sign-in login-form__input" type="submit" value="Sign In" /><br>
+                <a class="login-form__register" href="register.html">Register</a>
             </form>
-                <a class="register" href="register.html">Register</a>
-            </div>
         </div>
-    <section>
-        <div class="freeBlock"></div>
-        <div class="productLayout">
-            <div class="productDescription">
-
-                <div class="slider-img">
+    <section class="product-section">
+            <div class="product-description">
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Главная</a></li>
-                    <li><a href="Motherboard.html">Категория</a></li>
-                    <li>Товар</li>
+                    <li class="breadcrumb__list"><a href="index.html">Главная</a></li>
+                    <li class="breadcrumb__list"><a href="Motherboard.html">Категория</a></li>
+                    <li class="breadcrumb__list">Товар</li>
                 </ol>
-                <div class="sliderLayout">
-                    <div class="bigImgPositioner">
-
-                        <img src="img/CPU/Intel/Intel%20Celeron%20G1620%20OEM.jpg "/>
+                <div class="slider-img">
+                    <div class="big-img">
+                        <img class="big-img__positioner" src="img/CPU/Intel/Intel%20Celeron%20G1620%20OEM.jpg "/>
                     </div>
-                    <div class="minImg">
-                        <a href=""><div class="arrowLeft"></div></a>
-                        <img src="img/CPU/Intel/Intel%20Pentium%20G2020%20OEM.jpg"/>
-                        <img src="img/CPU/Intel/Intel%20Pentium%20G3220%20BOX.jpg"/>
-                        <img src="img/CPU/Intel/Intel%20Pentium%20G3420%20OEM.jpg"/>
-                        <img src="img/CPU/Intel/Intel%20Pentium%20G3440%20BOX.jpg"/> 
-                        <img src="img/CPU/Intel/Intel%20Pentium%20G3440%20BOX.jpg"/>
-                        <a href=""><div class="arrowRight"></div></a>
+                    <div class="min-img">
+                        <div class="min-img__arrow min-img__arrow-left"></div>
+                        <img class="min-img--style" src="img/CPU/Intel/Intel%20Pentium%20G2020%20OEM.jpg"/>
+                        <img class="min-img--style" src="img/CPU/Intel/Intel%20Pentium%20G3220%20BOX.jpg"/>
+                        <img class="min-img--style" src="img/CPU/Intel/Intel%20Pentium%20G3420%20OEM.jpg"/>
+                        <img class="min-img--style" src="img/CPU/Intel/Intel%20Pentium%20G3440%20BOX.jpg"/> 
+                        <img class="min-img--style" src="img/CPU/Intel/Intel%20Pentium%20G3440%20BOX.jpg"/>
+                       <div class="min-img__arrow min-img__arrow-right"></div>
                     </div>
                 </div>
-                </div>
-                <div class="layoutDescription"> 
-                    <h1> Товар </h1>
-                        <div class="imgStar">
-                    <div class="raiting"></div>
-                         </div>
+                <div class="layout-description"> 
+                    <h1 class="layout-description__header"> Товар </h1>
+                    <div class="img-star">
+                    <div class="img-star__raiting"></div>
+                    </div>
                     <p>Технические характеристики Процессор Intel Celeron G1820 OEM Intel Celeron четвертого поколения, тактовая частота 2700 МГц, тепловыделение 53 Ватт, сокет LGA 1150, двухканальный режим памяти.</p>
-                    <p><label for="quantiti">Quantity</label></p>
-                    <input type="number" min="1" max="100" value="1"> 
-                        <div class="addCartLoyout">
-                            <div class="price">Price: $555</div>
-                            <a href="CartPage.html">
-                                <div class="addCart">Add to cart
-                                </div>
-                            </a>
-                        </div>
+                    <p class="layout-description__label" ><label for="quantiti">Quantity</label></p>
+                    <input class="layout-description__quantiti" id="quantiti" type="number" min="1" max="100" value="1"> 
+                    <div class="add-cart">
+                        <div class="add-cart__price">Price: $555</div>
+                        <a class="add-cart__btn" href="CartPage.html">
+                            Add to cart
+                        </a>
+                    </div>
                     <div class="lineSocial">
-                        <a href=""><span class="twitter"></span></a>
-                        <a href=""><span class="vkontakte"></span></a>
-                        <a href=""><span class="facebook"></span></a>
-                        <a href=""><span class="instagram"></span></a>
-                        <a href=""><span class=""></span></a>
+                        <a class="lineSocial__twitter" href=""></a>
+                        <a class="lineSocial__vkontakte" href=""></a>
+                        <a class="lineSocial__facebook" href=""></a>
+                        <a class="lineSocial__instagram" href=""></a>
+                        <a class="" href=""></a>
                     </div>
                 </div>
             </div>
-        </div>
     </section>
     </div>
-    <footer>© 2015 Powered by Footerist</footer>
+    <footer class="footer">© 2015 Powered by Footerist</footer>
 
 </body>
 </html>
