--- a/MotherboardList.html
+++ b/MotherboardList.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MotherboardList</title>
 	<link rel="stylesheet"  href="style.css">
 </head>
