--- a/index.html
+++ b/index.html
@@ -37,18 +37,41 @@
             </form>
         </div>
 
-    <section>
-      <div class="content-layout">
-         <ul class="tab-content">
-            <li class="layoutCategories "><a class="Categories Motherboard" href="Motherboard.html"><div class="imgMotherboard"></div>Motherboard</a></li>
-             <li class="layoutCategories "><a class="Categories CPU" href="CPU.html"><div class="imgCPU"></div>CPU</a></li>
-             <li class="layoutCategories "><a class="Categories RAM" href="RAM.html"><div class="imgRAM"></div>RAM</a></li>
-             <li class="layoutCategories "><a class="Categories videoAdapter" href="videoAAdapter.html"><div class="imgvideoAdapter"></div>Video adapter</a></li>
-             <li class="layoutCategories "><a class="Categories HDD" href="HDD.html"><div class="imgHDD"></div>HDD</a></li>
-             <li class="layoutCategories "><a class="Categories powerSource" href="powerSource.html"><div class="imgPowerSource"></div>Power source</a></li>
-             <li class="layoutCategories "><a class="Categories Cooling" href="cooling.html"><div class="imgCooling"></div>Cooling</a></li>            
-        </ul>
-       </div>            
+    <section class="wrapper__product-section product-section">
+         <ul class="product-section__tab-content tab-content">
+            <li class="tab-content__layoutCategories">
+                <a class="Categories Motherboard" href="Motherboard.html">
+                    <div class="imgMotherboard"></div>Motherboard
+                </a>
+             </li>
+             <li class="tab-content__layoutCategories">
+                 <a class="Categories CPU" href="CPU.html">
+                     <div class="imgCPU"></div>CPU
+                 </a>
+             </li>
+             <li class="tab-content__layoutCategories">
+                 <a class="Categories RAM" href="RAM.html">
+                     <div class="imgRAM"></div>RAM
+                 </a>
+             </li>
+             <li class="tab-content__layoutCategories">
+                 <a class="Categories videoAdapter" href="videoAAdapter.html">
+                     <div class="imgvideoAdapter"></div>Video adapter
+                 </a>
+             </li>
+             <li class="tab-content__layoutCategories">
+                 <a class="Categories HDD" href="HDD.html">
+                     <div class="imgHDD"></div>HDD</a>
+             </li>
+             <li class="tab-content__layoutCategories">
+                 <a class="Categories powerSource" href="powerSource.html">
+                     <div class="imgPowerSource"></div>Power source</a>
+             </li>
+             <li class="tab-content__layoutCategories">
+                 <a class="Categories Cooling" href="cooling.html">
+                     <div class="imgCooling"></div>Cooling</a>
+             </li>            
+        </ul>    
     </section>
     </div>
     <footer class="footer">© 2015 Powered by Footerist</footer>
