--- a/src/productdescription.html
+++ b/src/productdescription.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
     <title>Product description</title>
-	<link rel="stylesheet"  href="stylus/style.css">
+	<link rel="stylesheet"  href="stylus/style.scss">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 </head>
 <body>
