--- a/src/productdescription.html
+++ b/src/productdescription.html
@@ -81,5 +81,6 @@
     </div>
     <footer class="footer">© 2015 Powered by Footerist</footer>
     <script src="js/slider.js"></script>
+    <script src="js/productdescriptions.js"></script>
 </body>
 </html>
