--- a/src/MotherboardReact.html
+++ b/src/MotherboardReact.html
@@ -10,11 +10,7 @@
 	<script src="js/build.js"></script>
 	<title>Motherboard React</title>
 	<link rel="stylesheet" href="stylus/style.css">
-	<script>
-		window.addEventListener("DOMContentLoaded", function() {
-			ReactDOM.render(React.createElement(headerPage), 								document.getElementById("React"));
-});
-</script>
+	<link rel="icon" href="img/Symbol/4.gif">
 	
 </head>
 	
